feat: implement companies api
