# controllers/companies.go
@@ -4,6 +4,9 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+
+	"github.com/ds-hack/stock-prediction-api/models"
+	"github.com/ds-hack/stock-prediction-api/services/companiesservice"
 )
 
 // ListCompanies godoc
@@ -11,12 +14,22 @@ import (
 // @Description Dashboardアプリに登録されている企業の基本情報を取得します。
 // @Tags companies
 // @Produce  json
-// @Success 200 {object} model.CompanyWrapper
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Success 200 {object} models.CompanyWrapper
+// @Failure 400 {object} models.HTTPError
+// @Failure 404 {object} models.HTTPError
+// @Failure 500 {object} models.HTTPError
 // @Router /companies [get]
-func ListCompanies(c *gin.Context) {
-	// TODO: implement logic!!
-	c.JSON(http.StatusOK, gin.H{"message": "do some magic!!"})
+func (c *Controller) ListCompanies(ctx *gin.Context) {
+	companyWrapper, err := companiesservice.GetAll()
+	if err != nil {
+		// TODO: 500エラーはSlack等によりAPI管理者へ通知する
+		// セキュリティ上のリスクに繋がるため、ユーザーに対してはエラーの詳細は表示しない。
+		ctx.JSON(http.StatusInternalServerError,
+			&models.HTTPError{
+				Status:  http.StatusInternalServerError,
+				Message: "企業情報一覧の取得時にサーバーでエラーが発生しました。",
+			})
+	}
+
+	ctx.JSON(http.StatusOK, companyWrapper)
 }
